# lesson_1

./: .gitignore  README.md  config.toml  emoji_use.py  message_count.py  msg_length.py  pyproject.toml  requirements.txt  weektivity.py
data/processed/: anon_reference.json
notebooks/: Modelling.ipynb  timestamp.ipynb
notebooks/cleaning/: 01-cleaning.ipynb  03.2-statistics-of-time.ipynb
src/: base_classes.py  base_plotter.py  config_handler.py  dimensionality.py  dimvis.py  dist_test.py  distribution.py  distribution_vis.py  emoji_use.py  main.py  persona_detector.py  relations.py  relationsV2.py  relations_streamlit.py  timestamp.py  visualization.py  weektivity.py
src/wa_cleaner/: preprocess.py
