[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wa-cleaner"
version = "0.1.0"
description = "WhatsApp Cleaner and Analyzer"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas~=2.2.3",
    "plotly~=5.24.1",
    "numpy~=2.1.1",
    "kaleido",
    "loguru~=0.7.2",
    "seaborn~=0.13.2",
    "scikit-learn~=1.5.2",
    "pydantic~=2.9.2",
    "click~=8.1.7",
    "matplotlib~=3.9.2",
    "requests",
    "emoji~=2.13.2",
    "textblob~=0.18.0.post0",
    "hatch",
    "tomli",
    "vaderSentiment",
    "pyarrow",
    "fastparquet"
]

[project.scripts]
"analyzer" = "wa_cleaner.preprocess:main"

[tool.hatch.build.targets.wheel]
packages = ["src/wa_cleaner"]